--- a/Lab10_Ex02.ipynb
+++ b/Lab10_Ex02.ipynb
@@ -69,7 +69,15 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object Oriented Programming\r\n"
+     ]
+    }
+   ],
    "source": [
     "using static System.Console;    // ใช้บรรทัดนี้ เพื่อไม่ต้องเขียน Console.WriteLine() เขียนแค่ WriteLine() ก็พอ \n",
     "\n",
@@ -98,7 +106,19 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(10,65): error CS0103: The name '_title' does not exist in the current context\r\n(11,20): error CS0103: The name '_title' does not exist in the current context\r\n(16,13): error CS0103: The name '_title' does not exist in the current context\r\n(17,64): error CS0103: The name '_title' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(10,65): error CS0103: The name '_title' does not exist in the current context\r\n",
+      "(11,20): error CS0103: The name '_title' does not exist in the current context\r\n",
+      "(16,13): error CS0103: The name '_title' does not exist in the current context\r\n",
+      "(17,64): error CS0103: The name '_title' does not exist in the current context"
+     ]
+    }
+   ],
    "source": [
     "public class Book  // ต้องสร้างคลาส เนื่องจาก property ต้องอยู่ภายในคลาสเท่านั้น\n",
     "{\n",
@@ -232,11 +252,24 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name = Suwannarat, Age = 20\r\n"
+     ]
+    }
+   ],
    "source": [
-    "Student stu  = new _________();\n",
-    "stu.Name = \"________\";\n",
-    "stu.Age = ____;\n",
+    "public class Student\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "}\n",
+    "    Student stu  = new();\n",
+    "stu.Name = \"Suwannarat\";\n",
+    "stu.Age = 20;\n",
     "WriteLine($\"Name = {stu.Name}, Age = {stu.Age}\");"
    ]
   },
@@ -261,12 +294,25 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name = Suwannarat, Age = 20\r\n"
+     ]
+    }
+   ],
    "source": [
-    "Student stu  = new _________();\n",
-    "stu.Name = \"________\";\n",
-    "stu.Age = ____;\n",
-    "WriteLine($\"Name = {stu.Name}, Age = {stu.Age}\");"
+    "public class Student\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "}\n",
+    "    Student stu1  = new();\n",
+    "stu1.Name = \"Suwannarat\";\n",
+    "stu1.Age = 20;\n",
+    "WriteLine($\"Name = {stu1.Name}, Age = {stu1.Age}\");"
    ]
   },
   {
