--- a/Lab10_Ex03.ipynb
+++ b/Lab10_Ex03.ipynb
@@ -79,13 +79,21 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Suwannarat\r\n"
+     ]
+    }
+   ],
    "source": [
     "using static System.Console;\n",
     "\n",
     "Person p = new();\n",
-    "p.Name = \"_______\";\n",
-    "WriteLine(p._name);  // p._name ได้หรือไม่ ถ้าไม่ได้ แก้ไขให้ถูกต้อง"
+    "p.Name = \"Suwannarat\";\n",
+    "WriteLine(p.Name);  // p._name ได้หรือไม่ ถ้าไม่ได้ แก้ไขให้ถูกต้อง"
    ]
   },
   {
@@ -144,7 +152,15 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\r\n"
+     ]
+    }
+   ],
    "source": [
     "Lamp myLamp = new Lamp();\n",
     "\n",
@@ -164,7 +180,15 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\r\n"
+     ]
+    }
+   ],
    "source": [
     "myLamp.IsOn = false; // พยายามปิดไฟ  แต่ไม่มีผล เนื่องจาก property นี้จะรับเฉพาะค่า true เท่านั้น \n",
     "Console.WriteLine(myLamp.IsOn); // Output: True"
@@ -222,9 +246,37 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\r\n"
+     ]
+    }
+   ],
    "source": [
-    "// พื้นที่เขียน code"
+    "// พื้นที่เขียน code\n",
+    "public class Product\n",
+    "{\n",
+    "    private decimal _price;\n",
+    "\n",
+    "    public decimal Price\n",
+    "    {\n",
+    "        get { return _price; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0)\n",
+    "            {\n",
+    "                _price = value;\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "        Product product = new();\n",
+    "        product.Price = 9; // กำหนดค่า Price ไม่น้อยกว่า 0\n",
+    "        WriteLine(product.Price);"
    ]
   },
   {
@@ -249,9 +301,37 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5\r\n"
+     ]
+    }
+   ],
    "source": [
-    "// พื้นที่เขียน code"
+    "// พื้นที่เขียน code\n",
+    "public class Product\n",
+    "{\n",
+    "    private decimal _price;\n",
+    "\n",
+    "    public decimal Price\n",
+    "    {\n",
+    "        get { return _price; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value <= 0)\n",
+    "            {\n",
+    "                _price = value;\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "        Product product = new();\n",
+    "        product.Price = -5; // กำหนดค่า Price น้อยกว่า 0\n",
+    "        WriteLine(product.Price);"
    ]
   },
   {
@@ -272,7 +352,16 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5  is odd? : True\n",
+      "5  is even? : False\n"
+     ]
+    }
+   ],
    "source": [
     "public class Countable\n",
     "{\n",
@@ -338,7 +427,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1032035649\n",
+      "9204\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "Random random = new Random();\n",
     "Console.WriteLine(random.Next());\n",
@@ -357,6 +456,46 @@
     "1. สร้าง object จากคลาส Countable\n",
     "2. ใส่ตัวเลขแบบสุ่ม (จากคลาส Random)\n",
     "3. ให้แสดงว่าตัวเลขนั้นเป็นเลขคี่หรือเลขคู่"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1341772151 is odd? : True\n",
+      "1341772151 is even? : False\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Countable\n",
+    "{\n",
+    "    private int _number;\n",
+    "\n",
+    "    public int Number\n",
+    "    {\n",
+    "        get => _number;\n",
+    "        set\n",
+    "        {\n",
+    "            if (value > 0)\n",
+    "                _number = value;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public bool IsOdd => _number % 2 != 0;\n",
+    "    public bool IsEven => !IsOdd;\n",
+    "}\n",
+    "        Random random = new Random();\n",
+    "        Countable number = new Countable();\n",
+    "        number.Number = random.Next();\n",
+    "\n",
+    "        Console.WriteLine($\"{number.Number} is odd? : {number.IsOdd}\");\n",
+    "        Console.WriteLine($\"{number.Number} is even? : {number.IsEven}\");"
    ]
   }
  ],
