--- a/Lab10_Ex04.ipynb
+++ b/Lab10_Ex04.ipynb
@@ -77,7 +77,48 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>70</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Score sc = new();\n",
     "sc.Value = 70;\n",
@@ -97,12 +138,80 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>79</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "Score sc = new();\n",
-    "sc.Value = __ใส่ค่าตัวเลขติดลบ__;\n",
-    "sc.Value         \n"
+    "public class Score\n",
+    "{\n",
+    "    private int _value;\n",
+    "\n",
+    "    public int Value\n",
+    "    {\n",
+    "        get { return _value; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0 && value <= 100)\n",
+    "            {\n",
+    "                _value = value;\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                throw new ArgumentOutOfRangeException(\"Score must be between 0 and 100.\");\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "Score lab = new();\n",
+    "lab.Value = 79;\n",
+    "lab.Value         \n"
    ]
   },
   {
@@ -206,12 +315,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66030196@kmitl.ac.th\r\n"
+     ]
+    }
+   ],
    "source": [
-    "Email email = new Email();\n",
-    "email.Address = \"input corect email address\";\n",
-    "Console.WriteLine(email.Address);"
+    "using System.Text.RegularExpressions;\n",
+    "\n",
+    "public class Email\n",
+    "{\n",
+    "    private string _address;\n",
+    "\n",
+    "    public string Address\n",
+    "    {\n",
+    "        get => _address;\n",
+    "        set\n",
+    "        {\n",
+    "            if (IsValidEmail(value))\n",
+    "            {\n",
+    "                _address = value;\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                throw new ArgumentException(\"Invalid email address.\");\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    private bool IsValidEmail(string value) // ตรวจสอบรูปแบบโดยใช้ Regular Expressions\n",
+    "    {\n",
+    "        string pattern = @\"^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$\";\n",
+    "        return Regex.IsMatch(value, pattern);\n",
+    "    }\n",
+    "}\n",
+    "        Email email = new Email();\n",
+    "        email.Address = \"66030196@kmitl.ac.th\"; // กำหนดค่า Email ที่ถูกต้อง\n",
+    "        Console.WriteLine(email.Address); // แสดง Email ที่เก็บใน object"
    ]
   },
   {
@@ -227,10 +379,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid email address.\r\n"
+     ]
+    }
+   ],
    "source": [
-    " // พื้นที่เชียน code (สามารถ copy จากด้านบนมาแก้ไขดัดแปลง หรือพิมพ์ใหม่ทั้งหมดก็ได้)"
+    "using System.Text.RegularExpressions;\n",
+    "\n",
+    "public class Email\n",
+    "{\n",
+    "    private string _address;\n",
+    "\n",
+    "    public string Address\n",
+    "    {\n",
+    "        get => _address;\n",
+    "        set\n",
+    "        {\n",
+    "            if (IsValidEmail(value))\n",
+    "            {\n",
+    "                _address = value;\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                throw new ArgumentException(\"Invalid email address.\");\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    private bool IsValidEmail(string value) // ตรวจสอบรูปแบบโดยใช้ Regular Expressions\n",
+    "    {\n",
+    "        string pattern = @\"^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$\";\n",
+    "        return Regex.IsMatch(value, pattern);\n",
+    "    }\n",
+    "}\n",
+    "        try\n",
+    "        {\n",
+    "            Email email = new Email();\n",
+    "            email.Address = \"66030178.kmitl.ac.th\"; // กำหนดค่า Email ที่ไม่ถูกต้อง\n",
+    "            Console.WriteLine(email.Address); // แสดง Email ที่เก็บใน object\n",
+    "        }\n",
+    "        catch (ArgumentException ex)\n",
+    "        {\n",
+    "            Console.WriteLine(ex.Message); // แสดงข้อความข้อผิดพลาด\n",
+    "        }"
    ]
   },
   {
@@ -243,7 +447,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Name\n",
@@ -291,11 +502,62 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Donale"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Name man = new Name();\n",
     "man.FirstName = \"Donale\";\n",
     "man.FirstName"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Suwannarat\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Name\n",
+    "{\n",
+    "    private string _firstName;\n",
+    "\n",
+    "    public string FirstName\n",
+    "    {\n",
+    "        get => _firstName;\n",
+    "        set\n",
+    "        {\n",
+    "            if (!string.IsNullOrEmpty(value))\n",
+    "            {\n",
+    "                _firstName = value;\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                throw new ArgumentNullException(\"First name cannot be null or empty.\");\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "        Name obj = new Name();\n",
+    "        obj.FirstName = \"Suwannarat\"; // กำหนดชื่อที่ถูกต้องให้กับ FirstName\n",
+    "        Console.WriteLine(obj.FirstName); // แสดงค่า FirstName"
    ]
   },
   {
@@ -311,12 +573,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value cannot be null. (Parameter 'First name cannot be null or empty.')\r\n"
+     ]
+    }
+   ],
    "source": [
-    "Name man = new Name();\n",
-    "man.FirstName = string.Empty;\n",
-    "man.FirstName"
+    "public class Name\n",
+    "{\n",
+    "    private string _firstName;\n",
+    "\n",
+    "    public string FirstName\n",
+    "    {\n",
+    "        get => _firstName;\n",
+    "        set\n",
+    "        {\n",
+    "            if (!string.IsNullOrEmpty(value))\n",
+    "            {\n",
+    "                _firstName = value;\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                throw new ArgumentNullException(\"First name cannot be null or empty.\");\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "        try\n",
+    "        {\n",
+    "            Name obj = new Name();\n",
+    "            obj.FirstName = string.Empty; // กำหนดค่าเป็น string.Empty\n",
+    "            Console.WriteLine(obj.FirstName); // แสดงค่า FirstName\n",
+    "        }\n",
+    "        catch (ArgumentNullException ex)\n",
+    "        {\n",
+    "            Console.WriteLine(ex.Message); // แสดงข้อความข้อผิดพลาด\n",
+    "        }"
    ]
   },
   {
@@ -331,12 +635,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "System.ArgumentNullException: Value cannot be null. (Parameter 'First name cannot be null or empty.')\r\n   at Submission#23.Name.set_FirstName(String value)\r\n   at Submission#24.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "output_type": "error",
+     "traceback": [
+      "System.ArgumentNullException: Value cannot be null. (Parameter 'First name cannot be null or empty.')\r\n",
+      "   at Submission#23.Name.set_FirstName(String value)\r\n",
+      "   at Submission#24.<<Initialize>>d__0.MoveNext()\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
+     ]
+    }
+   ],
    "source": [
     "Name man = new Name();\n",
     "man.FirstName = string.Empty;\n",
     "man.FirstName"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Name\n",
+    "{\n",
+    "    private string _firstName;\n",
+    "\n",
+    "    public string FirstName\n",
+    "    {\n",
+    "        get => _firstName;\n",
+    "        set\n",
+    "        {\n",
+    "            if (!string.IsNullOrEmpty(value))\n",
+    "            {\n",
+    "                _firstName = value;\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                throw new ArgumentNullException(\"First name cannot be null or empty.\");\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "        Name obj = new Name();\n",
+    "        Console.WriteLine(obj.FirstName); // แสดงค่า FirstName โดยไม่กำหนดค่าใดๆ"
    ]
   }
  ],
